debug: trying to debug silent auth problems

--- a/apps/Client.Web/public/silent-check-sso.html
+++ b/apps/Client.Web/public/silent-check-sso.html
@@ -5,7 +5,8 @@
   </head>
   <body>
     <script>
-      parent.postMessage(location.href, location.origin);
+      console.log('Silent SSO iframe loaded:', location.href);
+      parent.postMessage(location.href, '*');
     </script>
   </body>
 </html>
